@@ -5,6 +5,7 @@ kickseed (0.45) UNRELEASED; urgency=low
   * Make ksdevice=bootif emit a warning and be equivalent to leaving out
     ksdevice for now. Once netcfg supports being preseeded with a MAC
     address, this can be supported.
+  * Support 'part swap --recommended' (thanks, Rohit Kumar Mehta).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 14 Dec 2006 14:31:41 +0000
 
